<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/appBackgroundApp"
    tools:context=".AdicionarPalavra">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNPT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewADPalavra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/trebucbd"
        android:text="@string/title_novapalavra"
        android:textColor="?attr/appTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNPT" />

    <EditText
        android:id="@+id/editTAddWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/inputPalavra"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColor="?attr/appTextColor"
        android:textColorHint="?attr/appHintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewADPalavra"
        app:layout_constraintTop_toBottomOf="@+id/textViewADPalavra" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:background="@drawable/baseline_file_copy_black_48"
        android:onClick="getClipboardWord"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/editTAddWord"
        app:layout_constraintTop_toTopOf="@+id/editTAddWord"
        app:srcCompat="@drawable/baseline_file_copy_black_48" />

    <EditText
        android:id="@+id/editTAddTranslate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/inputTraducao"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textColor="?attr/appTextColor"
        android:textColorHint="?attr/appHintColor"
        app:layout_constraintEnd_toEndOf="@+id/editTAddWord"
        app:layout_constraintStart_toStartOf="@+id/editTAddWord"
        app:layout_constraintTop_toBottomOf="@+id/editTAddWord" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:background="@drawable/baseline_file_copy_black_48"
        android:onClick="getClipboardWord"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/editTAddTranslate"
        app:layout_constraintTop_toTopOf="@+id/editTAddTranslate"
        app:srcCompat="@drawable/baseline_file_copy_black_48" />

    <EditText
        android:id="@+id/editTAddetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_newword"
        android:inputType="textMultiLine"
        android:maxLength="250"
        android:textColor="?attr/appTextColor"
        android:textColorHint="?attr/appHintColor"
        app:layout_constraintEnd_toEndOf="@+id/editTAddTranslate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTAddTranslate"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/trebuc"
        android:text="@string/optional"
        android:textColor="?attr/appTextColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTAddTranslate"
        app:layout_constraintStart_toStartOf="@+id/editTAddetails"
        app:layout_constraintTop_toBottomOf="@+id/editTAddTranslate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        android:onClick="addWord"
        app:backgroundTint="?attr/appSecundaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_done_black_48" />

    <TextView
        android:id="@+id/dialogTextTwo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/trebucbi"
        android:gravity="center"
        android:text="Erros aqui"
        android:textAlignment="gravity"
        android:textColor="@color/secundaryColor"
        android:textColorHint="?attr/appTextWarningColor"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTAddetails"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textCharWord"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/trebucbd"
        android:text="0/30"
        android:textAlignment="viewEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/editTAddTranslate"
        app:layout_constraintEnd_toEndOf="@+id/editTAddWord"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editTAddWord" />

    <TextView
        android:id="@+id/textCharTrans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/trebucbd"
        android:text="0/30"
        android:textAlignment="viewEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/editTAddTranslate"
        app:layout_constraintStart_toStartOf="@+id/editTAddTranslate" />

    <TextView
        android:id="@+id/textCharDetalhes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/trebucbd"
        android:text="0/250"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editTAddetails"
        app:layout_constraintStart_toStartOf="@+id/editTAddetails"
        app:layout_constraintTop_toBottomOf="@+id/editTAddetails" />

</androidx.constraintlayout.widget.ConstraintLayout>